--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,9 @@
                         SCORE : <span id="score">0</span>
                     </div>
                     <div class="stat_inner">
+                        LINES : <span id="lines">0</span>
+                    </div>
+                    <div class="stat_inner">
                         LEVEL : <span id="level">1</span>
                     </div>
                     <div class="stat_inner">
@@ -25,8 +28,15 @@
                     <canvas class="next_figure"></canvas>
                 </div>
                 <div class="menu">
-                    <button id="start"> start</button>
-                    <input type="text" name="name" id="0">
+                    <button class="sketch-button" id="start"> start</button>
+                    <button class="sketch-button" id="pause"> pause</button>
+                    <form id="myForm" action="index.html" method="get">
+                        <label>
+                            Введите имя:<br>
+                            <input class="name" id="usernameInput" placeholder="Имя пользователя"><br>
+                        </label>
+                        <input class="sketch-button" type="submit" value="Ввод">
+                    </form>
                 </div>
                 <div class="table">
                     TOP 5
@@ -35,7 +45,7 @@
         </div>
     </div>
 
-    <script src="index.js" type="module" defer></script>
+    <script src="index.js" type="module" ></script>
 
 </body>
 </html>
